style.css
*html{
    top: 0;
    position: fixed;
}
header{
    margin-top: 0;
    background-image: url("./images/backgrounds/landing.jpg") ;
    }

.top{
    margin: auto;
    text-align: center;
    color: white;
    padding-bottom: 5%;
}
#happy{
    display: flex;
    flex-direction: column;
  
}

.container{
    display: flex;
    height: 200px;
}
#happy, #breakfast, #lunch, #dinner{
    width: 25%;
    text-align: center;
    font-family: sans-serif;
    font-size: 1.2em;
}
#breakfast{
    background-image: url("./images/foodtop/breakfast.jpg");
}
#lunch{
    background-image:url("./images/foodtop/lunch.jpg");
    opacity: 0.5;
}
#dinner{
    background-image: url("./images/foodtop/dinner.jpg");
}
#happy >#hy{
    height: 100px;
    color: black;
    background-color: grey;
    padding-top: 50px;
}
#happy >#pt{
    height: 100px;
     background-color:#F15A29;
     color: white;
     padding-top: 50px;
}
 #breakfast, #lunch, #dinner{
     padding-top: 100px;
     color: honeydew;
 }

 .food{
     
     width: 50%;
     margin: auto;
     padding-top: 50px;  
     display: flex;
     height: 400px;
    
 }
 #food-image{
   
    box-shadow:   0 8px 16px 0 rgba(145, 143, 143, 0.2);
  
    height: 220px;
    width: 140%;
    border: 2px solid grey;
    box-sizing: content-box;
    display: block;
    text-align: center;
    margin-right: 20px; 
    margin-top: 50px;
   
   }
   #fastfoodimg{
       padding: 10px;
       text-align: center;
      
   }
   #foodp{
       float: right;
       height: 200px;
       width: 150px;
   } 
   
.food>#foodp{
   height: 210px;
   width: 250px;
}
.drinks{
    display: flex;
    width: 50%;
    margin: auto;
    padding-top: 10px;
    padding-bottom: 20px;
   
}
.drinks>#desc{
    text-align: right;
    margin-right: 5px;
    height: 200px;
    width: 150px;
}
#drink-image{
    height: 110%;
    box-shadow: 00 8px 16px 0px grey;
    width: 265px;
    border: 2px solid grey;
    margin-left: 15%;
}
#drinkimg{
    text-align: center;
    padding: 10px;
}
button{
    color:#F15A29;
    border: 1px solid#F15A29;
    width: 200px;
    height: 50px;
    background-color: white;
}
    span {
        font-size: 30px;
    }
.middle{
    background-image: url("./images/backgrounds/foodsBg.jpg");
    height: 599px;
    padding-top: 20px;
    margin-bottom: 50px;
}
.middle>#items{
    width: 80%;
    height: 80%;
    margin: auto;
    background-color: white;
    
    margin: 50px auto 50px auto;
    
    text-align: center;
}
#allimages, #fastfood p{
    color: #F15A29;
}
#allimages{
    padding-top: 50px;
    display: flex;
    justify-content: space-around;
}
#labels{
    display: flex;
   
    }
    #fastfood, #Drc{
        width: 25%;
        text-align: center;
    }
    #Drc{
        background-color: rgb(192,192,192);
        border: 1px solid grey;
        color: black;
    }
    #previous{
        padding-top: 70px;
        font-size: 50px;
    }
    #next{
        padding-top: 50px;
        font-size: 50px;
    }
     .happyabout{
            margin-top: 50px;
            display: flex;
            width: 80%;
            margin: auto;
            box-shadow: 0 0 5px 2px grey;
            text-align: center;
        }
    .happyabout h3{
            color:#F15A29;
        }
     #happycustomers{
            width: 50%;
        }
    #aboutmenu{
            width: 50%;
            border-left: 2px solid grey;
            
        }
    span{ color:#F15A29;
        }
       
    .end{
            background-image: url("./images/backgrounds/subscribe.jpg");
            height: 300px;
            margin-top: 20px;
        }
   
    #mail{
        padding-top: 10px;
        
        height: 40px;
        width: 300px;
        background-color: white;
        
    }
    #mail a{
       
        color: rgb(211,211,211);
        text-decoration: none;
    }
    #mailandbutton{
        display: flex;
        justify-content: space-around;
        
    }
    #subscribe{
       color: white;
       background-color: #F15A29 ;
       margin-left: 20px;
    }
    #info{
        padding-top: 100px;
        width:50%;
        margin: auto;
        font-size: 1.3em; 
        color: white;
       
    }
    #info h3{
        padding-left: 50px;
    }
    footer{
        height: 300px;
        background-color: #F15A29;
        color: white;
        font-size: large;
    }
    .footermain{
       margin: auto;
       
       padding-left: 45%;
       padding-top: 5%;
    }
    #menus{
        display: flex;
        }
    #menus img{
        padding-right: 10px;
    }   
    #icons img{
        padding-left: 10px;
    } 
   .sidebar span{
       color: white;
       font-size: 50px;
   }
  header .sidebar{
      padding-top: 100px;
      text-align: left;
      padding-left: 100px;
  }
        
    
    
 

